Fix CSS issues in blog posts: lists, code blocks, and text spacing

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -87,7 +87,7 @@ p {
   margin-bottom: 1em;
 }
 .prose p {
-  margin-bottom: 2em;
+  margin-bottom: 1.5em;
 }
 textarea {
   width: 100%;
@@ -110,7 +110,7 @@ code {
   border-radius: 2px;
 }
 pre {
-  padding: 1.5em;
+  padding: 1em;
   border-radius: 8px;
 }
 pre > code {
@@ -125,6 +125,19 @@ blockquote {
 hr {
   border: none;
   border-top: 1px solid rgb(var(--gray-light));
+}
+ul {
+  list-style-type: disc;
+  padding-left: 1.5em;
+  margin-bottom: 1em;
+}
+ol {
+  list-style-type: decimal;
+  padding-left: 1.5em;
+  margin-bottom: 1em;
+}
+li {
+  margin-bottom: 0.5em;
 }
 @media (max-width: 720px) {
   body {
